끝말잇기 완성

--- a/word-relay/word-relay.html
+++ b/word-relay/word-relay.html
@@ -8,12 +8,10 @@
   </head>
   <body>
     <div><span id="order">1</span>번째 참가자</div>
-    <div>제시어<span id="word"></span></div>
+    <div>제시어 : <span id="word"></span></div>
     <input type="text" />
     <button>입력</button>
-
-    <script>
-      const number = Number(prompt("몇 명이 참가하나요?"));
-    </script>
+    <ul id="word-list"></ul>
+    <script src="./word-relay.js"></script>
   </body>
 </html>
