--- a/calculator/index.html
+++ b/calculator/index.html
@@ -9,33 +9,37 @@
     <link rel="stylesheet" href="./css/style.css" />
   </head>
   <body>
-    <div class="grid">
-      <input readonly id="operator" />
-      <input readonly id="result" type="number" />
-      <div class="row row1">
-        <button id="num-7">7</button>
-        <button id="num-8">8</button>
-        <button id="num-9">9</button>
-        <button id="plus">+</button>
+    <main>
+      <div class="grid">
+        <input readonly id="operator" />
+        <input readonly id="result" type="number" />
+        <div class="row row1">
+          <button id="num-7">7</button>
+          <button id="num-8">8</button>
+          <button id="num-9">9</button>
+          <button id="plus">+</button>
+        </div>
+        <div class="row row2">
+          <button id="num-4">4</button>
+          <button id="num-5">5</button>
+          <button id="num-6">6</button>
+          <button id="minus">-</button>
+        </div>
+        <div class="row row3">
+          <button id="num-1">1</button>
+          <button id="num-2">2</button>
+          <button id="num-3">3</button>
+          <button id="divide">/</button>
+        </div>
+        <div class="row row4">
+          <button id="clear">C</button>
+          <button id="num-0">0</button>
+          <button id="calculate">=</button>
+          <button id="multiply">*</button>
+        </div>
       </div>
-      <div class="row row2">
-        <button id="num-4">4</button>
-        <button id="num-5">5</button>
-        <button id="num-6">6</button>
-        <button id="minus">-</button>
-      </div>
-      <div class="row row3">
-        <button id="num-1">1</button>
-        <button id="num-2">2</button>
-        <button id="num-3">3</button>
-        <button id="divide">/</button>
-      </div>
-      <div class="row row4">
-        <button id="clear">C</button>
-        <button id="num-0">0</button>
-        <button id="calculate">=</button>
-        <button id="multiply">*</button>
-      </div>
-    </div>
+    </main>
+
+    <script src="./calculator.js"></script>
   </body>
 </html>
