--- a/number-baseball/index.html
+++ b/number-baseball/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <form id="form">
-      <input type="text" id="input" />
+      <input type="text" id="input" required />
       <button type="submit">확인</button>
     </form>
     <div id="logs"></div>
