--- a/number-baseball/index.html
+++ b/number-baseball/index.html
@@ -11,7 +11,7 @@
       <input type="text" id="input" required />
       <button type="submit">확인</button>
     </form>
-    <div id="logs"></div>
+    <ul id="logs"></ul>
     <script src="./number-baseball.js"></script>
   </body>
 </html>
