--- a/number-baseball/index.html
+++ b/number-baseball/index.html
@@ -5,13 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>숫자야구</title>
+    <!-- web font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <!-- style -->
+    <link rel="stylesheet" href="../common/minireset.css" />
+    <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
-    <form id="form">
-      <input type="text" id="input" required />
-      <button type="submit">확인</button>
-    </form>
-    <ul id="logs"></ul>
+    <main>
+      <section id="board">
+        <h1 class="title">숫자야구!</h1>
+        <div class="answer"></div>
+      </section>
+      <section id="">
+        <form id="form">
+          <input type="text" id="input" required />
+          <button type="submit">확인</button>
+        </form>
+      </section>
+      <ul id="logs"></ul>
+    </main>
+
     <script src="./number-baseball.js"></script>
   </body>
 </html>
