[221028] 입력한 숫자 확인 개선

--- a/number-baseball/index.html
+++ b/number-baseball/index.html
@@ -22,7 +22,13 @@
         <h1 class="title">숫자야구!</h1>
         <div class="answer"></div>
       </section>
-      <section id="">
+      <section id="container">
+        <ul class="ball_area">
+          <li class="ball"></li>
+          <li class="ball"></li>
+          <li class="ball"></li>
+          <li class="ball"></li>
+        </ul>
         <form id="form">
           <input type="text" id="input" required />
           <button type="submit">확인</button>
