--- a/lotto/index.html
+++ b/lotto/index.html
@@ -6,5 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>로또 추첨기</title>
   </head>
-  <body></body>
+  <body>
+    <div id="result">추첨 결과는?</div>
+    <div id="bonus">보너스:</div>
+
+    <script src="./lotto.js"></script>
+  </body>
 </html>
