--- a/rsp-game/index.html
+++ b/rsp-game/index.html
@@ -13,6 +13,8 @@
       <button id="scissors" class="btn">가위</button>
       <button id="paper" class="btn">보</button>
     </div>
+    <div id="score">0</div>
+
     <script src="./rsp.js"></script>
   </body>
 </html>
