승부확인하기 추가

--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -20,6 +20,8 @@
         width: 100px;
         height: 100px;
         border: 1px solid #000;
+        font-size: 3rem;
+        text-align: center;
       }
     </style>
   </head>
