--- a/tic-tac-toe/index.html
+++ b/tic-tac-toe/index.html
@@ -8,12 +8,12 @@
     <style>
       table {
         border: 1px solid #000;
+        border-spacing: 0;
       }
 
       tr {
         width: 100px;
         height: 100px;
-        border: 1px solid #000;
       }
 
       td {
