--- a/text-rpg/index.html
+++ b/text-rpg/index.html
@@ -42,6 +42,7 @@
       </div>
     </div>
 
-    <script src="./text-rpg.js"></script>
+    <!-- <script src="./text-rpg.js"></script> -->
+    <script src="./text-rpg-class.js"></script>
   </body>
 </html>
