우측클릭 기능 추가

--- a/mine-sweeper/index.html
+++ b/mine-sweeper/index.html
@@ -30,9 +30,7 @@
   </head>
   <body>
     <table id="table">
-      <tbody>
-        <tr></tr>
-      </tbody>
+      <tbody></tbody>
     </table>
 
     <div id="result"></div>
